[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/warp.png" type="Texture" id=1]
[ext_resource path="res://Player/WarpPoint.gd" type="Script" id=2]
[ext_resource path="res://UI/EquipmentPro.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="WarpPoint" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" type="Node2D" parent="."]
z_index = 10

[node name="StatusLabel" type="Label" parent="UI"]
margin_left = -48.0
margin_top = -64.0
margin_right = 48.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 3 )
text = "Ready"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_WarpPoint_area_entered"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
